feat:slectet ted image

--- a/src/app/studio/manage-studio-profile-container/manage-studio-profile-container.component.html
+++ b/src/app/studio/manage-studio-profile-container/manage-studio-profile-container.component.html
@@ -1,1 +1,1 @@
-<app-manage-studio-profile-presentation></app-manage-studio-profile-presentation>
+<app-manage-studio-profile-presentation [getCountry]="getCountry$ | async"[getState]="getState$ | async"[getCity]="getCity$ | async"></app-manage-studio-profile-presentation>
