--- a/src/app/manage-profile-container/manage-profile-presentation/manage-profile-presentation.component.html
+++ b/src/app/manage-profile-container/manage-profile-presentation/manage-profile-presentation.component.html
@@ -3,7 +3,7 @@
     <h4 class="mb-4">Manage Profile</h4>
     <form>
         <div class="row">
-            <div class="col-12 col-md-6 col-lg-4 ">
+            <div class="col-12 col-md-6 col-lg-4">
                 <div class="profile-image-main-wrapper border p-4">
                     <h5>Profile Image</h5>
                     <div class="d-flex flex-column justify-content-center align-items-center mt-5">
@@ -22,105 +22,106 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12  col-md-6 col-lg-8 ">
+            <div class="col-12 col-md-6 col-lg-8">
                 <div class="border p-2 p-sm-4 mt-3 mt-md-0">
                     <h5>Profile details</h5>
-                        <!-- First Row -->
-                        <div class="row">
-                            <!-- FirstName -->
-                            <div class="col-12 col-sm-6">
-                                <div class="form-group mt-3">
-                                    <label for="FirstName" class="fw-bold">First Name <span class="text-danger">
-                                            *</span></label>
-                                    <input type="text" class="form-control" id="FirstName" placeholder="First Name" />
-                                </div>
+                    <!-- First Row -->
+                    <div class="row">
+                        <!-- FirstName -->
+                        <div class="col-12 col-sm-6">
+                            <div class="form-group mt-3">
+                                <label for="FirstName" class="fw-bold">First Name <span class="text-danger">
+                                        *</span></label>
+                                <input type="text" class="form-control" id="FirstName" placeholder="First Name" />
                             </div>
-                            <!-- End  FirstName -->
-                            <!-- LastName -->
-                            <div class="col-12 col-sm-6">
-                                <div class="form-group mt-3">
-                                    <label for="LastName" class="fw-bold">Last Name <span class="text-danger">
-                                            *</span></label>
-                                    <input type="text" class="form-control" id="LastName" placeholder="Last Name" />
-                                </div>
-                            </div>
-                            <!-- End lastName -->
                         </div>
-                        <!-- Second Row -->
-                        <div class="row">
-                            <!-- Email ID -->
-                            <div class="col-12 col-sm-6">
-                                <div class="form-group mt-3">
-                                    <label for="EmailID" class="fw-bold">Email Id<span class="text-danger">
-                                            *</span></label>
-                                    <input type="text" class="form-control" id="EmailID" placeholder="Email ID" />
-                                </div>
+                        <!-- End  FirstName -->
+                        <!-- LastName -->
+                        <div class="col-12 col-sm-6">
+                            <div class="form-group mt-3">
+                                <label for="LastName" class="fw-bold">Last Name <span class="text-danger">
+                                        *</span></label>
+                                <input type="text" class="form-control" id="LastName" placeholder="Last Name" />
                             </div>
-                            <!-- End  Email ID -->
-                            <!-- Password -->
-                            <div class="col-12 col-sm-6">
-                                <div class="form-group mt-3">
-                                    <label for="Password" class="fw-bold">Password <span class="text-danger">
-                                            *</span></label>
-                                    <input type="text" class="form-control" id="Password" placeholder="Password" />
-                                </div>
-                            </div>
-                            <!-- End Password -->
                         </div>
-                        <!-- End Second Row -->
+                        <!-- End lastName -->
+                    </div>
+                    <!-- Second Row -->
+                    <div class="row">
+                        <!-- Email ID -->
+                        <div class="col-12 col-sm-6">
+                            <div class="form-group mt-3">
+                                <label for="EmailID" class="fw-bold">Email Id<span class="text-danger"> *</span></label>
+                                <input type="text" class="form-control" id="EmailID" placeholder="Email ID" />
+                            </div>
+                        </div>
+                        <!-- End  Email ID -->
+                        <!-- Password -->
+                        <div class="col-12 col-sm-6">
+                            <div class="form-group mt-3">
+                                <label for="Password" class="fw-bold">Password <span class="text-danger">
+                                        *</span></label>
+                                <input type="text" class="form-control" id="Password" placeholder="Password" />
+                            </div>
+                        </div>
+                        <!-- End Password -->
+                    </div>
+                    <!-- End Second Row -->
 
-                        <!-- Third Row -->
-                        <div class="row">
-                            <!-- Phone Number -->
-                            <div class="col-12 col-sm-6">
-                                <div class="form-group mt-3">
-                                    <label for="PhoneNumber" class="fw-bold">Phone Number<span class="text-danger">
-                                            *</span></label>
-                                    <input type="text" class="form-control" id="PhoneNumber"
-                                        placeholder="Phone Number" />
-                                </div>
+                    <!-- Third Row -->
+                    <div class="row">
+                        <!-- Phone Number -->
+                        <div class="col-12 col-sm-6">
+                            <div class="form-group mt-3">
+                                <label for="PhoneNumber" class="fw-bold">Phone Number<span class="text-danger">
+                                        *</span></label>
+                                <input type="text" class="form-control" id="PhoneNumber" placeholder="Phone Number" />
                             </div>
-                            <div class="col-12 col-sm-6">
-                                <div class="row">
-                                    <!-- Select State -->
-                                    <div class="col-12 col-sm-6">
-                                        <div class="form-group mt-3">
-                                            <div class="form-group mt-3">
-                                                <label for="state" class="fw-bold">Select State<span
-                                                        class="text-danger">
-                                                        *</span></label>
-                                                <ng-select placeholder="Select State">
-                                                    <ng-option *ngFor="let user of userTypes" [value]="user.id">{{
-                                                        user.name }}</ng-option>
-                                                </ng-select>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!-- End State -->
-                                    <!-- Select City -->
-                                    <div class="col-12 col-sm-6">
-                                        <div class="form-group mt-3">
-                                            <div class="form-group mt-3">
-                                                <label for="City" class="fw-bold">Select City<span class="text-danger">
-                                                        *</span></label>
-                                                <ng-select placeholder="Select City">
-                                                    <ng-option *ngFor="let user of userTypes" [value]="user.id">{{
-                                                        user.name }}</ng-option>
-                                                </ng-select>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!-- End City -->
-                                </div>
-                            </div>
-                            <!-- End Phone Number -->
                         </div>
-                        <!-- End Third Row -->
-                         <!-- submit and Cancel button -->
-                  <div class="button my-5 my-lg-3 d-flex justify-content-end ">
-                     <button type="button" class="btn btn-outline-info me-2 me-sm-3">Cancel</button>
-                      <button type="submit" class="btn btn-primary btn-gradient border-0 text-nowrap ">Book Now</button>
-                </div>
+                        <div class="col-12 col-sm-6">
+                            <div class="row">
+                                <!-- Select State -->
+                                <div class="col-12 col-sm-6">
+                                    <div class="form-group mt-3">
+                                        <div class="form-group mt-3">
+                                            <label for="state" class="fw-bold">Select State<span class="text-danger">
+                                                    *</span></label>
+                                            <ng-select placeholder="Select State">
+                                                <ng-option *ngFor="let user of userTypes" [value]="user.id">{{ user.name
+                                                    }}</ng-option>
+                                            </ng-select>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- End State -->
+                                <!-- Select City -->
+                                <div class="col-12 col-sm-6">
+                                    <div class="form-group mt-3">
+                                        <div class="form-group mt-3">
+                                            <label for="City" class="fw-bold">Select City<span class="text-danger">
+                                                    *</span></label>
+                                            <ng-select placeholder="Select City">
+                                                <ng-option *ngFor="let user of userTypes" [value]="user.id">{{ user.name
+                                                    }}</ng-option>
+                                            </ng-select>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- End City -->
+                            </div>
+                        </div>
+                        <!-- End Phone Number -->
+                    </div>
+                    <!-- End Third Row -->
+                    <!-- submit and Cancel button -->
+                    <div class="button my-5 my-lg-3 d-flex justify-content-end">
+                        <button type="button" class="btn btn-outline-info me-2 me-sm-3">
+                            Cancel
+                        </button>
+                        <button type="submit" class="btn btn-primary btn-gradient border-0 text-nowrap">
+                            Book Now
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
